Objetivo 3/k8s/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-app
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-app
  template:
    metadata:
      labels:
        app: bookstore-app
    spec:
      containers:
        - name: flaskapp
          image: 381491948161.dkr.ecr.us-east-1.amazonaws.com/bookstore:v1  # asegúrate de construirla o subirla a Docker Hub
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-service
  namespace: bookstore
spec:
  selector:
    app: bookstore-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
